--- a/templates/articles/statistic.html
+++ b/templates/articles/statistic.html
@@ -1,4 +1,4 @@
-<h1>Article dengan komentar terbanyak :</h1>
+<p>Article dengan komentar terbanyak :</p>
 <table style="width: 100%">
     <colgroup>
        <col style="width: 50%">
@@ -19,7 +19,7 @@
         {% endfor %}
     </tbody>
 </table>
-<h1>Member dengan komentar terbanyak :</h1>
+<p>Member dengan komentar terbanyak :</p>
 <table style="width: 100%">
     <colgroup>
        <col style="width: 50%">
