Add logic for viewed article counter. Counter will increase only if article viewed by user but not the autor

--- a/templates/articles/statistic.html
+++ b/templates/articles/statistic.html
@@ -34,7 +34,7 @@
     <tbody>
         {% for commenter in most_commenter %}
             <tr>
-                <td>{{ commenter.user.member }}</td>
+                <td><a href="{% url 'members:profile' commenter.user.member %}">{{ commenter.user.member }}</a></td>
                 <td>{{ commenter.total_comment }}</td>
             </tr>
         {% endfor %}
