--- a/templates/members/profile.html
+++ b/templates/members/profile.html
@@ -3,6 +3,7 @@
 {% block title %}Profile{% endblock %}
 {% block content %}
     <h1>Profil</h1>
+    <img src="{{ profile.member.photo.url }}" width="240">
     <p>Username : {{ profile.username }}</p>
     <p>Email : {{ profile.email }}</p>
 {% endblock %}
