Fix upload photo to replace default photo profile

--- a/templates/members/dashboard.html
+++ b/templates/members/dashboard.html
@@ -6,6 +6,12 @@
 
     {% if member.photo %}
         <img src="{{ member.get_photo_url }}" width="240">
+        <form method="post" enctype="multipart/form-data" action="{% url 'members:edit_photo_profile' user.username %}">
+        {{ form.as_p }}
+        {% csrf_token %}
+        <button type="submit">Replace</button>
+        <a href="#"><button>Delete</button></a>
+        </form>
     {% else %}
         <img src="/media/default.jpeg">
         <form method="post" enctype="multipart/form-data" action="{% url 'members:edit_photo_profile' user.username %}">
