--- a/templates/articles/submit.html
+++ b/templates/articles/submit.html
@@ -3,9 +3,9 @@
 {% block title %}Submit Article{% endblock %}
 
 {% block content %}
- <form method="post">
+ <form enctype="multipart/form-data" method="post">
  {{ form.as_p }}
  {% csrf_token %}
- <input type="submit" value="Submit Article">
+ <input type="submit" name="image" value="Upload">
  </form>
 {% endblock %}
